--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "@verida/account-web-vault": "^1.1.12",
-    "@verida/client-ts": "^1.1.15",
+    "@verida/types": "^2.0.5",
+    "@verida/web-helpers": "^2.0.5",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react": "^1.1.7",
@@ -39,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.4.2",
     "url": "^0.11.0",
