put profile component on home view

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ REACT_APP_VERIDA_APP_LOGO_URL=https://assets.verida.io/verida_login_request_logo
 REACT_APP_VERIDA_ENV=testnet
 
 # Mandatory: Link to the KYC provider (FinClusive). Will be appended with the DID of the user
-REACT_APP_KYC_PROVIDER_URL=
+REACT_APP_KYC_PROVIDER_URL=https://webforms.sandbox.finclusive.com/individual.html
 
 # Mandatory: Required to request the KYC VC. URL of the schema used to issue the VC. Must be publically accessible.
-REACT_APP_KYC_VC_SCHEMA_URL=
+REACT_APP_KYC_VC_SCHEMA_URL=https://common.schemas.verida.io/identity/kyc/FinClusive/individual/latest/schema.json
