--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "compliant-defi-demo",
-  "description": "Non functioning DeFi application to demonstrate Verifiable Credentials capabilities with KYC",
+  "name": "finclusive-demo",
+  "description": "Application to demonstrate Verifiable Credentials capabilities with KYC",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@verida/types": "^2.2.0",
+    "@verida/verifiable-credentials": "^2.2.0",
     "@verida/web-helpers": "^2.2.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "^8.20.0",
