add new env variables

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ REACT_APP_FINCLUSIVE_ACCESS_CODE=
 
 # Mandatory: Required to request the KYC VC. URL of the schema used to issue the VC. Must be publically accessible.
 REACT_APP_KYC_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
+
+#
+REACT_APP_FINCLUSIVE_DID=
+
+#
+REACT_APP_KYC_VC_SCHEMA_ID=https://common.schemas.verida.io/identity/kyc/FinClusive/individual-basic/latest/schema.json
