verify vc when received

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,9 @@ REACT_APP_FINCLUSIVE_ACCESS_CODE=
 # Mandatory: Required to request the KYC VC. URL of the schema used to issue the VC. Must be publically accessible.
 REACT_APP_KYC_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
 
-#
+# DID of FinClusive
+# For the demo, will be checked against the received VC from the user, so only FinClusive-issued VC are considered valid, but in real-life, we would encourage supporting multiple KYC issuers.
 REACT_APP_FINCLUSIVE_DID=
 
-#
+# Id of the schema of the KYC credential. For interoperability purpose, we would encourage a standardised KYC schema.
 REACT_APP_KYC_VC_SCHEMA_ID=https://common.schemas.verida.io/identity/kyc/FinClusive/individual-basic/latest/schema.json
