update README and clean up

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ REACT_APP_VERIDA_APP_LOGO_URL=https://assets.verida.io/verida_login_request_logo
 # Optional: Environment of the Verida Network. Defaults to 'testnet'
 REACT_APP_VERIDA_ENV=testnet
 
-# Mandatory: Link to the KYC provider (FinClusive). Will be appended with the DID of the user
-REACT_APP_KYC_PROVIDER_URL=https://webforms.sandbox.finclusive.com/individual.html
+# Mandatory: Link to the KYC provider (FinClusive). Will be appended with the DID of the user and the access code
+REACT_APP_KYC_PROVIDER_URL=
 
 # Mandatory: Finclusive Access Code
 REACT_APP_FINCLUSIVE_ACCESS_CODE=
@@ -22,9 +22,9 @@ REACT_APP_FINCLUSIVE_ACCESS_CODE=
 # Mandatory: Required to request the KYC VC. URL of the schema used to issue the VC. Must be publically accessible.
 REACT_APP_KYC_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
 
-# DID of FinClusive
+# Mandatory: DID of FinClusive.
 # For the demo, will be checked against the received VC from the user, so only FinClusive-issued VC are considered valid, but in real-life, we would encourage supporting multiple KYC issuers.
 REACT_APP_FINCLUSIVE_DID=
 
-# Id of the schema of the KYC credential. For interoperability purpose, we would encourage a standardised KYC schema.
+# Optional: Id of the schema of the KYC credential. For interoperability purpose, we would encourage a standardised KYC schema.
 REACT_APP_KYC_VC_SCHEMA_ID=https://common.schemas.verida.io/identity/kyc/FinClusive/individual-basic/latest/schema.json
