--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,8 @@ REACT_APP_KYC_PROVIDER_URL=
 # Mandatory: Finclusive Access Code
 REACT_APP_FINCLUSIVE_ACCESS_CODE=
 
-# Mandatory: Required to request the KYC VC. URL of the schema used to issue the VC. Must be publically accessible.
-REACT_APP_KYC_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
+# Mandatory: Schema of the Credentials stored in the Vault.
+REACT_APP_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
 
 # Mandatory: DID of FinClusive.
 # For the demo, will be checked against the received VC from the user, so only FinClusive-issued VC are considered valid, but in real-life, we would encourage supporting multiple KYC issuers.
