fix env var example with vc schema version

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ REACT_APP_KYC_PROVIDER_URL=
 REACT_APP_FINCLUSIVE_ACCESS_CODE=
 
 # Mandatory: Schema of the Credentials stored in the Vault.
-REACT_APP_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/latest/schema.json
+REACT_APP_VC_SCHEMA_URL=https://common.schemas.verida.io/credential/base/v0.2.0/schema.json
 
 # Mandatory: DID of FinClusive.
 # For the demo, will be checked against the received VC from the user, so only FinClusive-issued VC are considered valid, but in real-life, we would encourage supporting multiple KYC issuers.
